# echomoniter

./: .gitignore  README.md  build.gradle  gradle.properties  gradlew  settings.gradle  编译APK指南.md  运行指南.md
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audio_capture.cpp  audio_engine.cpp  audio_engine.h  audio_playback.cpp  jni_bridge.cpp  volume_limiter.cpp  volume_limiter.h
app/src/main/java/com/echomonitor/: EchoApplication.kt  MainActivity.kt
app/src/main/java/com/echomonitor/audio/: AudioEngine.kt  VolumeController.kt
app/src/main/java/com/echomonitor/permission/: PermissionManager.kt
app/src/main/java/com/echomonitor/service/: AudioMonitoringService.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
docs/: 开发计划.md  项目结构.md
